editted the list

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                     		<ul class="hobbies__list"> 
                     			<li> Studying Japanese </li>
                     			<li> Learning instruments </li>
-                    			<li> Creating small projects </li>
                     			<li> Reading </li>
                     		</ul>
                     	</p>
@@ -88,7 +87,7 @@
 
 
 			</div> <!-- / about me-->
-			<a href="#work" class="btn">My Projects</a>
+			<a href="#work" class="btn" id="projects_button">My Projects</a>
 		</section>
 
 
