--- a/index.html
+++ b/index.html
@@ -74,20 +74,59 @@
 				 		<h3>
 				 			My skills
 				 		</h3>
-                    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    	<p> 
+							<h2> Technical Skills </h2>
+							<ul class="skills__list">
+								<li>  	
+									<h3>Python</h3> 
+									<li> Flask </li>
+									<li> Pandas </li>
+								</li> 
+								<li> JavaScript </li>
+								<li> Java </li>
+								<li> SQL </li>
+								<li> C++ </li>
+							</ul>
+						</p>
 				 </div> <!-- /  skills-->
 
 				 <div class="my-achievements"> 
 				 		<h3>
-				 			My achievements
+				 			My achievements and Certifications
 				 		</h3>
-                    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				 </div> <!-- /  skills-->
+                    	<p> 
+							<h2> Japanese </h2>
+							<ul class="japanese__list"> 
+								<li> Japanese Speech Award Contest 2018 3rd Place</li>
+								<li> </li>
+							</ul>
+						</p>
+				 </div> 
+
+				 <div class="internship-experiences">
+					 <h3> 
+						 Internship/Work Experiences/School Projects 
+					 </h3>
+					 <p> 
+						 <ul class="internship__list">
+							 <li> 
+								 <h3> 2021 </h3>
+								 <ol> Intern at Inland Revenue Authority Singapore (May to July) </ol> 
+								 <ol> Orbital (TamagoDoWork) (May to July) </ol>
+							</li>
+							<li> 
+								<h3> 2020 </h3>
+								<ol> Temporary Staff at the Singapore Stock Exchange (March to July) </ol>
+								<ol> Translator at Arkadin Pte Ltd (January to February) </ol>
+							</li>
+						 </ul>
+					 </p>
+				 </div> 
 
 
 
 			</div> <!-- / about me-->
-			<a href="#work" class="btn" id="projects_button">My Projects</a>
+			<button><a href="#projects" class="btn" id="projects_button">My Projects</a></button>
 		</section>
 
 
