minor edits to the  font size

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 				 			My skills
 				 		</h3>
                     	<p> 
-							<h2> Technical Skills </h2>
+							<h4> Technical Skills </h4>
 							<ul class="skills__list">
 								<li>  	
 									<h3>Python</h3> 
-									<li> Flask </li>
-									<li> Pandas </li>
+									<ol> Flask </ol>
+									<ol> Pandas </ol>
 								</li> 
 								<li> JavaScript </li>
 								<li> Java </li>
