--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 							<h4> Technical Skills </h4>
 							<ul class="skills__list">
 								<li>  	
-									<h3>Python</h3> 
-									<ol> Flask </ol>
-									<ol> Pandas </ol>
+									<p>Python</p> 
+									<ul class="python__list"> 
+										<li> Flask </li>
+										<li> Pandas </li>
+									</ul>
 								</li> 
 								<li> JavaScript </li>
 								<li> Java </li>
