edit japanese section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="about me"> 
 				 <div class="my-hobbies"> 
 				 		<h3>
-				 			My hobbies
+				 			Hobbies
 				 		</h3>
                     	<p>
                     		<ul class="hobbies__list"> 
@@ -72,10 +72,9 @@
 
 				 <div class="my-skills"> 
 				 		<h3>
-				 			My skills
+				 			Technical skills
 				 		</h3>
                     	<p> 
-							<h4> Technical Skills </h4>
 							<ul class="skills__list">
 								<li>  	
 									<p>Python</p> 
@@ -92,15 +91,21 @@
 						</p>
 				 </div> <!-- /  skills-->
 
+				 <!-- achievement section -->
 				 <div class="my-achievements"> 
 				 		<h3>
-				 			My achievements and Certifications
+				 			Achievements & Certifications 
 				 		</h3>
                     	<p> 
-							<h2> Japanese </h2>
-							<ul class="japanese__list"> 
-								<li> Japanese Speech Award Contest 2018 3rd Place</li>
-								<li> </li>
+							<ul>
+								<li> 
+									<p> Japanese </p> 
+									<ul class="japanese__list"> 
+										<li> Japanese Speech Award Contest 2018 3rd Place</li>
+										<li> JLPT N2 Certification </li>
+									</ul>
+								</li>
+								
 							</ul>
 						</p>
 				 </div> 
