update projects corner

--- a/index.html
+++ b/index.html
@@ -133,16 +133,20 @@
 
 
 			</div> <!-- / about me-->
-			<button><a href="#projects" class="btn" id="projects_button">My Projects</a></button>
+			<button align="center"><a href="#projects" class="btn" id="projects_button">My Projects</a></button>
 		</section>
 
 
 
 		<!--My Current Projects --> 
 		<section class="current-projects" id="projects"> 
-			<h2 class="section__title">My Projects
-			</h2>
-            <p class="section__subtitle"></p>
+			<h2 class="section__title" align="center">My Projects</h2>
+            <div class="section__subtitle">
+				<ul class="projects__list"> 
+					<li> Self Service Data Mining Tool </li>
+					<li> Task Management Android Application </li>
+				</ul>
+			</div>
 		</section>
 
 		<!-- Footer -->
