align the div for the projects

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<!--My Current Projects --> 
 		<section class="current-projects" id="projects"> 
 			<h2 class="section__title" align="center">My Projects</h2>
-            <div class="section__subtitle">
+            <div align="center" class="section__subtitle">
 				<ul class="projects__list"> 
 					<li> Self Service Data Mining Tool </li>
 					<li> Task Management Android Application </li>
