--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 		<!--My Current Projects --> 
 		<section class="current-projects" id="projects"> 
-			<h2 class="section__title" align="center">My Projects</h2>
+			<h2 class="section__title section__title--current-projects"> My Projects </h2>
             <div class="section__subtitle">
 				<ul class="projects__list"> 
 					<li> Self Service Data Mining Tool </li>
