--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 		</section>
 		<!--About me --> 
 		<section class="about-me" id="about_me"> 
-			<h2 class="section__title section__title--about-me">About Me 
-			</h2>
+			<h2 class="section__title section__title--about-me">About Me</h2>
 			<div class="about me"> 
 				 <div class="my-hobbies"> 
 				 		<h3>
