--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 		<!--My Current Projects --> 
 		<section class="current-projects" id="projects"> 
 			<h2 class="section__title section__title--current-projects"> My Projects </h2>
-            <div class="section__subtitle">
-				<ul class="projects__list"> 
-					<li> Self Service Data Mining Tool </li>
-					<li> Task Management Android Application </li>
+            <div class="section__subtitle section__subtitle--current-projects">
+				<ul id="projectlist" class="centered--list" > 
+					<li class="projects"> Self Service Data Mining Tool </li>
+					<li class="projects"> Task Management Android Application </li>
 				</ul>
 			</div>
 		</section>
