fixed listing style

--- a/index.html
+++ b/index.html
@@ -117,13 +117,17 @@
 						 <ul class="internship__list">
 							 <li> 
 								 <h3> 2021 </h3>
-								 <ol> Intern at Inland Revenue Authority Singapore (May to July) </ol> 
-								 <ol> Orbital (TamagoDoWork) (May to July) </ol>
+								 <ul>
+									<li> Intern at Inland Revenue Authority Singapore (May to July) </li> 
+									<li> Orbital (TamagoDoWork) (May to July) </li> 
+								 </ul>
 							</li>
 							<li> 
 								<h3> 2020 </h3>
-								<ol> Temporary Staff at the Singapore Stock Exchange (March to July) </ol>
-								<ol> Translator at Arkadin Pte Ltd (January to February) </ol>
+								<ul>
+									<li> Temporary Staff at the Singapore Stock Exchange (March to July) </li>
+									<li> Translator at Arkadin Pte Ltd (January to February) </li>
+								</ul>
 							</li>
 						 </ul>
 					 </p>
