made button transparent

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
 
 
 			</div> <!-- / about me-->
-			<button align="center"><a href="#projects" class="btn" id="projects_button">My Projects</a></button>
+			<div id="button_div" > 
+			<button id="projects_btn" class="transparent"><a href="#projects">My Projects</a></button>
+			</div>
 		</section>
 
 
