--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <footer class= "footer">
             <a href="mailto:shainesnake@gmail.com" class="footer__link">shainesnake@gmail.com</a>
             <ul class="social-list">
-            	<li class = "social-list__item"><a class = "social-list__link" href="https://twitter.com/home"><i class="fab fa-twitter"></i></a></li>
+            	<li class = "social-list__item"><a class = "social-list__link" href="https://twitter.com/shaine_goh"><i class="fab fa-twitter"></i></a></li>
 
             	<li class = "social-list__item"><a class = "social-list__link" href="https://www.linkedin.com/in/shaine-goh-3b0b12b3/"><i class="fab fa-linkedin"></i></a></li>
 
