tried to add sound to the website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<!-- head --> 
 	<head>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<embed src="rain-01.mp3" loop="true" autostart="true" width="2" height="0">
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width = device-width, initial-scale = 1.0">
 		<title>Shaine's Portfolio Website</title>
